# StyleTTS2

./: inference_script.py  pyproject.toml
styletts2/: model_paths.yml  models.py  train_finetune_accelerate.py  utils.py
