[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "styletts2"
version = "1.0"
description = "Installable package for styletts2"
authors = [
    { name = "Jarod Mica" }
]

dependencies = [
    "SoundFile",
    "torchaudio",
    "munch",
    "torch",
    "pydub",
    "pyyaml",
    "librosa",
    "nltk",
    "matplotlib",
    "accelerate",
    "transformers",
    "einops",
    "einops-exts",
    "tqdm",
    "typing",
    "typing-extensions",
    "phonemizer",
    "gradio"
]

requires-python = ">=3.9"

[project.optional-dependencies]
monotonic_align = [
    "monotonic-align @ git+https://github.com/resemble-ai/monotonic_align.git"
]

[project.urls]
repository = "https://github.com/JarodMica/StyleTTS2"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = ["styletts2", "styletts2/**"]
